# MT-Server-FastAPI

./: .env.template  .gitignore  CLAUDE.md  MIGRATION_NOTES.md  README.md  STEP1_PLAN.md  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: eec7e1c67748_create_users_table.py
app/: main.py
app/core/: config.py  db.py  security.py
app/users/: dependencies.py  models.py  router.py  schemas.py  service.py
